k8s/c.gloss-api-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloss-api-client
spec:
  replicas: 1
  selector:
    matchLabels:
      run : gloss-api-client
  template:
    metadata:
      labels:
        run: gloss-api-client
    spec:
      containers:
        - name: gloss-api-client
          image: docker.io/mstoews/gloss-api-client:v1.1.10
          resources:
            requests:
             memory: "128Mi"
             cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
