k8s/b.server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gloss-api-backend
  ports:
    - port: 3010
      targetPort: 3010
