k8s/c.client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gloss-api-client
  labels:
    run: gloss-api-client
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: gloss-api-client
