k8s/a.ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /backend(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: gloss-api-backend
              port: 
                number: 3010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gloss-api-client
              port: 
                number: 80
